--- a/hype_app/pubspec.yaml
+++ b/hype_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
